@@ -8,6 +8,11 @@
   ------------------------------------------------------------------------
 
 
+2006-10-11   Christian Stimming <stimming@tuhh.de>
+
+	* src/gwenhywfar.c: Make plugindir lookup relocatable as well. By
+	now, the full gwenhywfar should be relocatable.
+
 2006/10/11: Martin Preuss<martin@libchipcard.de>
 ------------------------------------------------
 - added functions GWEN_NetLayerPackets_GetFixedPacketSize() and
